v10/fixtures/ast/errors/struct_functional_update_source/source.able
struct Point {
  x: i32
}

updated := Point { ...[1], x: 1 }
